force-app/main/default/objects/Detalle_Factura__c/fields/Costo_Total__c.field-meta.xml
<CustomField>
    <fullName>Costo_Total__c</fullName>
    <label>Costo Total</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>