force-app/main/default/objects/Detalle_Factura__c/fields/Factura_Posicion__c.field-meta.xml
<CustomField>
    <fullName>Factura_Posicion__c</fullName>
    <externalId>true</externalId>
    <label>Factura_Posicion</label>
    <length>20</length>
    <type>Text</type>
</CustomField>