force-app/main/default/objects/Detalle_Factura__c/fields/Peso_neto__c.field-meta.xml
<CustomField>
    <fullName>Peso_neto__c</fullName>
    <label>Peso neto</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>