force-app/main/default/objects/Detalle_Factura__c/fields/Posicion__c.field-meta.xml
<CustomField>
    <fullName>Posicion__c</fullName>
    <label>Posicion</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>