force-app/main/default/objects/Detalle_Factura__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Detalles Facturas</relationshipLabel>
    <relationshipName>Detalles_Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>