force-app/main/default/objects/Detalle_Factura__c/fields/Unidad_de_Medida__c.field-meta.xml
<CustomField>
    <fullName>Unidad_de_Medida__c</fullName>
    <label>Unidad de Medida</label>
    <length>5</length>
    <type>Text</type>
</CustomField>