force-app/main/default/objects/Detalle_Factura__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <formula>IF(
  Unidad_de_Medida__c = &quot;KG&quot;,
  IF(
    Peso_neto__c &gt; 0,
    Valor_Neto__c / Peso_neto__c,
    0
  ),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>