force-app/main/default/objects/Detalle_Factura__c/fields/Valor_Neto__c.field-meta.xml
<CustomField>
    <fullName>Valor_Neto__c</fullName>
    <label>Valor Neto</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>