force-app/main/default/objects/Detalle_Factura__c/fields/valore_Rappel__c.field-meta.xml
<CustomField>
    <fullName>valore_Rappel__c</fullName>
    <label>valore Rappel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>