force-app/main/default/objects/Detalle_Factura__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Factura__c</columns>
    <columns>Posicion__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Product__c</columns>
    <columns>Valor_Neto__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>